# Ini

./: CMakeLists.txt
include/: ini_exception.hpp  ini_file.h  ini_sectionsmap.hpp  ini_storage.h
src/: ini_file.cpp  ini_storage.cpp
